Javascript file routed

--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
-    <head>
-        <meta chartset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-        <title>Timed Quiz</title>
-        <link rel="stylesheet" href="style.css"/>
-    </head>
-    <body>
-        <div class="wrapper">
-            <header>
-                <h1>Multiple Choice Timed Quiz</h1>
-            </header>
+
+<head>
+    <meta chartset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Timed Quiz</title>
+    <link rel="stylesheet" href="./assets/style.css" />
+</head>
+
+<body>
+    <div class="wrapper">
+        <header>
+            <h1>Multiple Choice Timed Quiz</h1>
+        </header>
         <div class="card">
             <div class="card-header">
                 <h2>Question 1</h2> 
             </div>
-        <div class="card-body">
+            <div class="card-body">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius debitis vero atque commodi, ea
+                    molestias optio cum officiis illum laudantium minus, ipsum eum deserunt nostrum?</p>
+            </div>
+        </div>
+    </div>
+    <script src="assets/script.js"></script>
+</body>
 
-        </div>
-
-        </div>
-        </div>
-    </body>
+</html>
