--- a/index.html
+++ b/index.html
@@ -9,20 +9,16 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header>
-            <h1>Multiple Choice Timed Quiz</h1>
-        </header>
-        <div class="card">
-            <div class="card-header">
-                <h2>Question 1</h2> 
-            </div>
-            <div class="card-body">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius debitis vero atque commodi, ea
-                    molestias optio cum officiis illum laudantium minus, ipsum eum deserunt nostrum?</p>
-            </div>
-        </div>
+    <h1>Tyrannosaurus rex Quiz</h1>
+    <div class="quiz-container">
+    <div id="quiz"></div>
     </div>
+
+    <button id="previous">Previous</button>
+    <button id="next">Next Question</button>
+    <button id="Submit">Submit Quiz</button>
+    <div id="results"></div>
+
     <script src="assets/script.js"></script>
 </body>
 
