Debugging and Modifications

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Tyrannosaurus rex Quiz</h1>
+    <h1>Tyrannosaurus Rex Timed Quiz</h1>
     <div class="quiz-container">
     <div id="quiz"></div>
     </div>
