--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta chartset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Timed Quiz</title>
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Skranji&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Tyrannosaurus Rex Timed Quiz</h1>
+    <h1> 🦕 Tyrannosaurus Rex Quiz 🦖 </h1>
     <div class="quiz-container">
-    <div id="quiz"></div>
+        <div id="quiz"></div>
     </div>
-
-    <button id="previous">Previous</button>
+    <button id="previous">Previous Question</button>
     <button id="next">Next Question</button>
-    <button id="Submit">Submit Quiz</button>
+    <button id="submit">Submit Quiz</button>
     <div id="results"></div>
-
-    <script src="assets/script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
