--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <button id="submit">Submit Quiz</button>
     <div id="results"></div>
     <script src="./assets/script.js"></script>
+    <footer class="footer">
+        <h1>🌾🌿🌴🌿🦎🌿🌿🌴🌾🌿🌿🐊🌿🌴🌾🌿🌿🦖🌿🌾🌴🌴🌿🌾🐍🌿🌴</h1>
+    </footer>
 </body>
 
 </html>
