--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <button id="next">Next Question</button>
     <button id="submit">Submit Quiz</button>
     <div id="results"></div>
+
+    <div class="card timer">
+        <div class = "timer-text">
+            <div class="large-font timer-count">150</div>
+            <h2>Time remaining</h2></div>
+
     <script src="./assets/script.js"></script>
     <footer class="footer">
         <h1>🌾🌿🌴🌿🦎🌿🌿🌴🌾🌿🌿🐊🌿🌴🌾🌿🌿🦖🌿🌾🌴🌴🌿🌾🐍🌿🌴</h1>
