--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
 <body>
     <h1> 🦕 Tyrannosaurus Rex Quiz 🦖 </h1>
+    <div id="start">
+        <button id="startbutton">Start</button>
+    </div>
     <div class="quiz-container">
         <div id="quiz"></div>
     </div>
@@ -24,8 +27,9 @@
 
     <div class="card timer">
         <div class = "timer-text">
-            <div class="large-font timer-count">150</div>
+            <div class="large-font timer-count"></div>
             <h2>Time remaining</h2></div>
+            <div id="lose"></div>
 
     <script src="./assets/script.js"></script>
     <footer class="footer">
