--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <button id="previous">Previous Question</button>
     <button id="next">Next Question</button>
-    <button id="submit">Submit Quiz</button>
+    <button id="submit">Submit Score</button>
     <div id="results"></div>
 
     <div class="card timer">
