Username Submit Form

--- a/index.html
+++ b/index.html
@@ -26,15 +26,32 @@
     <div id="results"></div>
 
     <div class="card timer">
-        <div class = "timer-text">
+        <div class="timer-text">
             <div class="large-font timer-count"></div>
-            <h2>Time remaining</h2></div>
-            <div id="lose"></div>
+            <h2>Time remaining</h2>
+        </div>
+        <div id="lose"></div>
+        <form>
+            <div class="scoreBox">
+                <label for="Name">Username</label>
+                <input type="text" id="name" placeholder="Name">
+            </div>
+            <div class="scoreBox">
+                <label for="Score">High Score</label>
+                <input type="score" id="score" placeholder="Score">
+            </div>
+            <div class="scoreBox">
+                <button id="scorebtn">Click to Add</button>
+            </div>
+            <div id="msg">
+                <pre></pre>
+            </div>
+        </form>
 
-    <script src="./assets/script.js"></script>
-    <footer class="footer">
-        <h1>🌾🌿🌴🌿🦎🌿🌿🌴🌾🌿🌿🐊🌿🌴🌾🌿🌿🦖🌿🌾🌴🌴🌿🌾🐍🌿🌴</h1>
-    </footer>
+        <script src="./assets/script.js"></script>
+        <footer class="footer">
+            <h1>🌾🌿🌴🌿🦎🌿🌿🌴🌾🌿🌿🐊🌿🌴🌾🌿🌿🦖🌿🌾🌴🌴🌿🌾🐍🌿🌴</h1>
+        </footer>
 </body>
 
 </html>
