--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <input type="score" id="score" placeholder="Score">
             </div>
             <div class="scoreBox">
-                <button id="scorebtn">Click to Add</button>
+                <button id="scorebtn">Submit</button>
             </div>
             <div id="msg">
                 <pre></pre>
